@@ -1,4 +1,5 @@
 v2.8.20 include python/test_cracklib.py in release tarball (Jan Dittberner)
+        rename python/_cracklibmodule.c to python/_cracklib.c to support Python 3.3 (Jan Dittberner)
 v2.8.19 drop autogenerated files from SVN (Mike Frysinger)
         add words from "The Top 500 Worst Passwords of All Time" <http://www.whatsmypass.com/the-top-500-worst-passwords-of-all-time> to dicts/cracklib-small (patch by Fabian Greffrath)
         include sys/stat.h in python/_cracklibmodule.c (Mike Frysinger)
